2-k3s/05.traefik-deployment/ingress/https-redirect.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: https-redirect-epaflix
spec:
  entryPoints:
    - web
  routes:
    - match: HostRegexp(`{subdomain:[a-z0-9-]+}.epaflix.com`) || Host(`epaflix.com`)
      kind: Rule
      middlewares:
        - name: redirect-https
          namespace: traefik-system
      services:
        - kind: TraefikService
          name: noop@internal
