2-k3s/05.traefik-deployment/ingress/t3code-proxy.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: t3code-https
  namespace: traefik-system
spec:
  entryPoints:
    - internal
  routes:
    - match: Host(`t3code.epaflix.com`)
      kind: Rule
      services:
        - name: t3code
          namespace: t3code
          port: 3773
  tls:
    certResolver: cloudflare
    domains:
      - main: epaflix.com
        sans:
          - "*.epaflix.com"
